--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
     />
     <link rel="stylesheet" href="index.css" />
-    <script defer scr="render.js"></script>
+    <script defer src="render.js"></script>
   </head>
   <body>
     <h1>Screen Recorder</h1>
